--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -42,3 +42,11 @@ nav{
 .wine-card > p:nth-child(2){
   margin-block: 1rem;
 }
+
+.error{
+  border: 2px solid red;
+}
+
+span{
+  cursor: pointer;
+}
