--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -50,3 +50,39 @@ nav{
 span{
   cursor: pointer;
 }
+
+form{
+  width: 300px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+label, input {
+  display: block;
+}
+
+input {
+  padding: 10px;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  width: 100%;
+  border: 1px solid blue;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+form button {
+  border: 0;
+  padding: 10px;
+  font-family: "Poppins";
+  border-radius: 4px;
+  cursor: pointer;
+  background: rgb(197, 197, 197);
+}
+div.error {
+  padding: 10px;
+  background: #ffefef;
+  border-radius: 4px;
+  margin: 20px 0;
+}
